--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
         </ul>
       </nav>
 
-      <div class="header-group">
-        <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul class="header-group list">
+        <li class="contact-item">
+          <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contacts-list">
+          <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
 
     <!-- Блок унікального контенту на сторінці Hero-->
