--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,14 @@
           </li>
         </ul>
       </nav>
-
-      <div class="header-group">
-        <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul class="header-group list">
+        <li class="contact-item">
+          <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contacts-list">
+          <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
 
     <!-- Блок унікального контенту на сторінці -->
@@ -51,7 +54,7 @@
 
       <section class="portfolio">
         <h1 class="portfolio-header">Портфолио</h1>
-        <ul class="portfolio-list">
+        <ul class="portfolio-list list">
           <li class="portfolio-item">
             <button class="portfolio-btn" type="button">Все</button>
           </li>
